# slipslop

./: .gitignore  README.md  slipslop.cabal
src/: Main.hs  SlipSlop.hs
src/Distribution/: Core.hs  CountHistogram.hs  Histogram.hs
src/Element/: Core.hs
src/SlipSlop/: Distribution.hs  Element.hs  TopK.hs
src/SlipSlop/Distribution/: CountHistogram.hs  Histogram.hs
src/SlipSlop/TopK/: Accurate.hs  BufferedStreamSummary.hs  CountSketch.hs  MeanStreamSummary.hs  StreamSummary.hs
src/TopK/: Accurate.hs  Core.hs  CountSketch.hs  MeanStreamSummary.hs  StreamSummary.hs
