Name:                slipslop
Version:             0.1
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.10

executable slipslop
  hs-source-dirs: src
  main-is: Main.hs
  default-language: Haskell2010

  build-depends:
    base                       >= 4     && < 5,
    containers                 == 0.4.2.1,
    random                     == 1.0.1.1

  ghc-options: -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -O2
               -fno-warn-orphans
               -Werror

  default-extensions: FlexibleInstances,
                      OverloadedStrings,
                      MultiParamTypeClasses,
                      ScopedTypeVariables

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  SlipSlop
                  , SlipSlop.Distribution
                  , SlipSlop.Distribution.CountHistogram
                  , SlipSlop.Distribution.Histogram
                  , SlipSlop.Element
                  , SlipSlop.TopK
                  , SlipSlop.TopK.Accurate
                  , SlipSlop.TopK.CountSketch
                  , SlipSlop.TopK.BufferedStreamSummary
                  , SlipSlop.TopK.MeanStreamSummary
                  , SlipSlop.TopK.StreamSummary

  build-depends:
    base                       >= 4     && < 5,
    containers                 == 0.4.2.1,
    random                     == 1.0.1.1

  ghc-options: -threaded
               -Wall
               -fwarn-tabs
               -funbox-strict-fields
               -O2
               -fno-warn-orphans
               -Werror

  default-extensions: FlexibleInstances,
                      OverloadedStrings,
                      MultiParamTypeClasses,
                      ScopedTypeVariables
